# plansys2-hospital-roboros

./: CMakeLists.txt  LICENSE  README.md  commands.txt  package.xml
.github/: main.yaml
bt_xml/: drop.xml  move.xml  place.xml
config/: params.yaml
include/bt_include/: Drop.hpp  Move.hpp  Pick.hpp  Place.hpp
launch/: hospital_launch.py  plansys_try.launch  plansys_try_launch.py
maps/: map_1650637778.pgm  map_1650637778.yaml  map_fine.pgm  map_fine.yaml  map_fine_modified.pgm
pddl/: example.pddl  hospital_domain.pddl  simple.pddl
src/: drop_action_node.cpp  move_action_node.cpp  pick_action_node.cpp  tiago_controller_node.cpp
src/bt_nodes/: Drop.cpp  Move.cpp  Pick.cpp  Place.cpp
